--- a/src/main/webapp/users.html
+++ b/src/main/webapp/users.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html ng-app="loginApp">
+<html ng-app="userApp">
 <head>
 <title>Stock control V2 home page</title>
 <script type="text/javascript"
 	src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-<script src="login-app.js"></script>
+<script src="resources/js/userApp.js"></script>
 <link href="resources/css/bootstrap.min.css" rel="stylesheet">
 <link href="resources/css/styles.css" rel="stylesheet">
 </head>
 <body>
 
-	DODO
+<div class="span6" ng-controller="UserCtrl">
+    <table class="table table-striped table-condensed">
+        <thead>
+        <tr>
+            <th style="min-width: 80px;">First name</th>
+            <th style="min-width: 80px;">Last name</th>
+            <th style="width:20px;"> </th>
+            <th style="width:20px;"> </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="user in users">
+            <td>{{ user.username }}</td>
+            <td>{{ user.password }}</td>
+            <td><a ng-click="editUser(user.username)" class="btn btn-small btn-primary">edit</a></td>
+            <td><a ng-click="deleteUser(user.username)" class="btn btn-small btn-danger">delete</a></td>
+        </tr>
+        </tbody>
+    </table>
+    <a ng-click="createNewUser()" class="btn btn-small">create new user</a>
+</div>
 
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
